# birb-run

./: Cargo.toml  Makefile  README.md  car.yaml  engine-v8.yaml  tasks.yaml  tasks_2.yaml  tasks_3.json  tasks_4.json.nu  test-signals.yaml  workbench.yaml
.github/workflows/: rust.yml
docs/: README.md
schemas/: schema.json
src/: cli.rs  command.rs  compat.rs  lib.rs  main.rs  run.rs  signal_manager.rs  task.rs  utils.rs
src/cli/: threads_config.rs  value_parser.rs
src/run/: default_run_manager.rs  dependency_resolution.rs  execution.rs  parallel_run_manager.rs  run_manager.rs
src/run/dependency_resolution/: naive.rs  topological_sort.rs
src/run/execution/: naive copy.rs  naive.rs  scheduler.rs  triggers.rs
src/run/run_manager/: default.rs  parallel.rs
src/task/: from_yaml.rs  frontend.rs  instantiation.rs  invocation.rs  loader.rs  params.rs  task.rs  task_ref.rs  taskfile.rs  workspace.rs
src/task/from_yaml/: command.rs  deps.rs  io.rs
src/task/frontend/: yaml.rs  yaml_executable.rs
src/task/loader/: yaml.rs  yaml_executable.rs
src/utils/: type_checking.rs
