[package]
name = "birb-task"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
cli-styles = { git = "https://github.com/e-birb/cli-styles", version = "0.1.0" }
colored = "3.0.0"
env_logger = "0.11.8"
handlebars = "6.3.2"
indicatif = "0.18.0"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
log = "0.4.27"
makefile-lossless = "0.2.1"
pathdiff = "0.2.3"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
termimad = "0.33.0"
thiserror = "2.0.12"
yaml-rust = "0.4.5"
#crossterm = "0.27"
#crossbeam-channel = "0.5"
tokio = { version = "1.47.1", features = ["full"] }
num_cpus = "1.17.0"
shlex = "1.3.0"
tempfile = "3.21.0"
chrono = "0.4.41"
ctrlc = "3.5.0"

#[dev-dependencies]
#fastrand = "2.3.0"
